--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
             </ul>
         </div>
         <div class="homeContent">
-            <button id="carregarMais">carregar mais</button>
+
             <div class="gallery"></div>
+            <button id="carregarMais" onclick="main()">carregar mais</button>
         </div>
         <script src="main.js"></script>
     </body>
