--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="logoContent">
                 <div class="logo">
                     <img src="img/logo.png" alt="imagem controle">
-                    <h1 class="logoName">Titulo</h1>
+                    <h1 class="logoName">Game to Estudent</h1>
                 </div>
             </div>
             <ul class="navList">
@@ -66,11 +66,23 @@
                 </li> 
             </ul>
         </div>
+        <nav>
+            <ul>
+                <li><a><img src="imgs/Logo.png"></a></li>
+                <li><a class="navLink" href="#gallerySection">PC</a></li>
+                <li><a class="navLink" href="#teamSection">Windows</a></li>
+                <li><a class="navLink" href="#contactSection">All</a></li>
+                <li><a class="navLink" href="#contactSection">Favorite</a></li>
+            </ul>
+        </nav>
         <div class="homeContent">
-
+            <div id="scroller"></div>
             <div class="gallery"></div>
             <button id="carregarMais" onclick="main()">carregar mais</button>
         </div>
+        <footer class="footer">
+            <p>© Game to Estudent — Todos os direitos reservados.</p>
+        </footer>
         <script src="main.js"></script>
     </body>
 </html>
