--- a/index.html
+++ b/index.html
@@ -8,64 +8,7 @@
         <title>Titulo</title>
     </head>
     <body>
-        <div class="sideBar">
-            <div class="logoContent">
-                <div class="logo">
-                    <img src="img/logo.png" alt="imagem controle">
-                    <h1 class="logoName">Titulo</h1>
-                </div>
-            </div>
-            <ul class="navList">
-                <li>
-                    <a id="homeId">
-                        <img src="img/home.png" alt="imagem home">
-                        <span class="linksName">HOME</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/pvp.png" alt="imagem pvp">
-                        <span class="linksName">Ordem Alfabética</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/mmo.png" alt="imagem mmo">
-                        <span class="linksName">Relevância</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/survival.png" alt="imagem survival">
-                        <span class="linksName">SURVIVAL</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/card.png" alt="imagem card">
-                        <span class="linksName">PVP</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/fighting.png" alt="imagem fighting">
-                        <span class="linksName">HORROR</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/shooting.png" alt="imagem shooting">
-                        <span class="linksName">ZUMBI</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/home.png" alt="imagem home">
-                        <span class="linksName">ESTRATÉGIA</span>
-                    </a>
-                </li> 
-            </ul>
-        </div>
+        <div class="sideBar"></div>
         <div class="homeContent">
             <button id="carregarMais">carregar mais</button>
             <div class="gallery"></div>
