--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banner</title>
+    <title>Banner carrossel</title>
     <link rel="stylesheet" href="style.css">
     <script src="banner.js" defer></script>
 </head>
@@ -18,15 +18,5 @@
             </div>
         </div>
     </div>
-    <!-- <div class="botao-esquerdo">
-        <button class="seta-esquerda seta" id="esquerda">
-            &leftarrow;
-        </button>
-    </div>
-    <div class="botao-direito">
-        <button class="seta-direita seta" id="direita">
-            &rightarrow;
-        </button>
-    </div> -->
 </body>
 </html>
