--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
     <script src="banner.js" defer></script>
 </head>
 <body>
-    <div class="banner">
-        <div class="carrossel">
-            <div class="container" id="img">
+    <div class="carrossel-container">
+        <div class="carrossel" id="carrossel">
+            <div class="slide">
                 <img src="img/pubg.jfif" alt="pubg">
+            </div>
+            <div class="slide">
                 <img src="img/fortnite.jfif" alt="fortnite">
+            </div>
+            <div class="slide">
                 <img src="img/minecraft.jfif" alt="minecraft">
             </div>
         </div>
+        <button class="seta-esquerda setas" id="esquerda">
+            &leftarrow;
+        </button>
+        <button class="seta-direita setas" id="direita">
+            &rightarrow;
+        </button>
     </div>
 </body>
 </html>
