--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="sideBar"></div>
         <div class="homeContent">
-            <button id="carregarMais">carregar mais</button>
+            <button class="removeElements" id="carregarMais">carregar mais</button>
             <div class="gallery"></div>
         </div>
         <script src="main.js"></script>
