reestruturação do código em módulos e função para consumo da API

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
             <button class="removeBotao" id="carregarMais">carregar mais</button>
             <div class="gallery"></div>
         </div>
-        <script src="main.js"></script>
-    </body>
+        <script type="module" src="JS/main.js"></script>
+    </body> -->
 </html>
