header, sideBar, homeContent dinamicos em modulos

--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
         <title>SÓ A NATA</title>
     </head>
     <body>
-        <div class="sideBar"></div>
-        <div class="homeContent">
-            <button class="removeBotao" id="carregarMais">carregar mais</button>
-            <div class="gallery"></div>
-        </div>
         <script type="module" src="JS/main.js"></script>
-    </body> -->
+    </body>
 </html>
