--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
         <title>SÓ A NATA</title>
     </head>
-    <body>
+    <body id="body">
         <div class="sideBar"></div>
         <div class="homeContent">
             <button class="removeBotao" id="carregarMais">carregar mais</button>
