--- a/index.html
+++ b/index.html
@@ -1,136 +1,146 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Game To Estudent</title>
-</head>
-<body id="body">
-  <div class="sideBar">
-    <div class="logoContent">
-      <div class="logo">
-        <img src="img/logo.png">
-        <h1 class="logoName">GAME TO ESTUDENT</h1>
-      </div>
-    </div>
-    <ul class="navList">
-      <li>
-        <a class="ancHome">
-          <img src="img/home.png">
-          <span class="linksName">HOME</span>
-        </a>
-      </li>
-    </ul>
-    <ul class="navList">
-      <li>
-        <a class="ancRelevancia">
-          <img src="img/relevancia.png">
-          <span class="linksName">RELEVÂNCIA</span>
-        </a>
-      </li>
-    </ul>
-    <ul class="navList">
-      <li>
-        <a class="ancAlfabetica">
-          <img src="img/alfabetica.png">
-          <span class="linksName">ALFABÉTICA</span>
-        </a>
-      </li>
-    </ul>
-    <ul class="navList">
-      <li>
-        <a class="ancMmorpg">
-          <img src="img/mmo.png">
-          <span class="linksName">MMORPG</span>
-        </a>
-      </li>
-    </ul>
-    <ul class="navList">
-      <li>
-        <a class="ancMoba">
-          <img src="img/battle.png">
-          <span class="linksName">MOBA</span>
-        </a>
-      </li>
-    </ul>
-    <ul class="navList">
-      <li>
-        <a class="ancCard">
-          <img src="img/card.png">
-          <span class="linksName">CARD</span>
-        </a>
-      </li>
-    </ul>
-    <ul class="navList">
-      <li>
-        <a class="ancStrategy">
-          <img src="img/strategy.png">
-          <span class="linksName">ESTRATÉGIA</span>
-        </a>
-      </li>
-    </ul>
-    <ul class="navList">
-      <li>
-        <a class="ancOpenWorld">
-          <img src="img/openworld.png">
-          <span class="linksName">OPEN WORLD</span>
-        </a>
-      </li>
-    </ul>
-  </div>
-  <div class="homeContent">
-    <div class="galleryBanner"></div>
-    <button class="removeBotao" id="carregarMais">carregar mais</button>
-    <div class="gallery"></div>
-  </div>
-  <nav class="headerNav">
-    <div class="ancorasDiv">
-      <a class="PC">PC</a>
-      <a class="Browser">Browser</a>
-      <a class="All">All</a>
-      <a class="Favoritos" onclick="favorite()">Favoritos</a>
-    </div>
-    <form id="formulario">
-      <div class="divCategorias">
-        <div class="divOptions">
-          <label>Plataforma: </label>
-          <select id="selecione5" name="selecione">
-            <option name="selecione" selected="" disabled="">Selecione a plataforma</option>
-            <option name="selecione" id="PC2" value="">PC</option>
-            <option name="selecione" id="BROWSER2" value="2">BROWSER</option>
-          </select>
-        </div>
-        <div class="divCheckboxs">
-          <label>Selecione a categoria: </label>
-          <div>
-            <input type="checkbox" id="MMORPG2" value="1">
-            <label for="MMORPG2">MMORPG</label>
-          </div>
-          <div>
-            <input type="checkbox" id="MOBA2">
-            <label for="MOBA2">MOBA</label>
-          </div>
-          <div>
-            <input type="checkbox" id="CARD2">
-            <label for="CARD2">CARD</label>
-          </div>
-          <div>
-            <input type="checkbox" id="ESTRATEGIA2">
-            <label for="ESTRATEGIA2">Estratégia</label>
-          </div>
-          <div>
-            <input type="checkbox" id="OPENWORD2">
-            <label for="OPENWORD2">Open Word</label>
-          </div>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Game To Estudent</title>
+  </head>
+  <body id="body">
+    <div class="sideBar">
+      <div class="logoContent">
+        <div class="logo">
+          <img src="img/logo.png">
+          <h1 class="logoName">GAME TO ESTUDENT</h1>
         </div>
       </div>
-      <div>
-        <input type="submit" value="FILTRAR" class="FILTRAR">
+      <ul class="navList">
+        <li>
+          <a class="ancHome">
+            <img src="img/home.png">
+            <span class="linksName">HOME</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="navList">
+        <li>
+          <a class="ancRelevancia">
+            <img src="img/relevancia.png">
+            <span class="linksName">RELEVÂNCIA</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="navList">
+        <li>
+          <a class="ancAlfabetica">
+            <img src="img/alfabetica.png">
+            <span class="linksName">ALFABÉTICA</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="navList">
+        <li>
+          <a class="ancMmorpg">
+            <img src="img/mmo.png">
+            <span class="linksName">MMORPG</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="navList">
+        <li>
+          <a class="ancMoba">
+            <img src="img/battle.png">
+            <span class="linksName">MOBA</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="navList">
+        <li>
+          <a class="ancCard">
+            <img src="img/card.png">
+            <span class="linksName">CARD</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="navList">
+        <li>
+          <a class="ancStrategy">
+            <img src="img/strategy.png">
+            <span class="linksName">ESTRATÉGIA</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="navList">
+        <li>
+          <a class="ancOpenWorld">
+            <img src="img/openworld.png">
+            <span class="linksName">OPEN WORLD</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="homeContent">
+      <div class="galleryBanner"></div>
+      <button class="removeBotao" id="carregarMais">carregar mais</button>
+      <div class="gallery"></div>
+    </div>
+    <nav class="headerNav">
+      <div class="ancorasDiv">
+        <a class="PC">PC</a>
+        <a class="Browser">Browser</a>
+        <a class="All">All</a>
+        <a class="Favoritos" onclick="favorite()">Favoritos</a>
       </div>
-    </form>
-  </nav>
-  <script src="script.js"></script>
-</body>
+      <form id="formulario">
+        <div class="divCategorias">
+          <div class="divOptions">
+            <select id="selecione5" name="selecione">
+              <option name="selecione" selected="" disabled="">Selecione a plataforma</option>
+              <option name="selecione" id="PC2" value="">PC</option>
+              <option name="selecione" id="BROWSER2" value="2">BROWSER</option>
+            </select>
+          </div>
+          <div class="divCheckboxs">
+            <div>
+              <input type="checkbox" id="POPULAR">
+              <label for="POPULAR">Populares</label>
+            </div>
+            <div>
+              <input type="checkbox" id="RELEVANCE">
+              <label for="RELEVANCE">Relevância</label>
+            </div>
+            <div>
+              <input type="checkbox" id="ALFABET">
+              <label for="ALFABET">Alfabética</label>
+            </div>
+            <div>
+              <input type="checkbox" id="MMORPG2">
+              <label for="MMORPG2">MMORPG</label>
+            </div>
+            <div>
+              <input type="checkbox" id="MOBA2">
+              <label for="MOBA2">MOBA</label>
+            </div>
+            <div>
+              <input type="checkbox" id="CARD2">
+              <label for="CARD2">CARD</label>
+            </div>
+            <div>
+              <input type="checkbox" id="ESTRATEGIA2">
+              <label for="ESTRATEGIA2">Estratégia</label>
+            </div>
+            <div>
+              <input type="checkbox" id="OPENWORD2">
+              <label for="OPENWORD2">Open Word</label>
+            </div>
+          </div>
+        </div>
+        <div>
+          <input type="submit" value="FILTRAR" class="FILTRAR">
+        </div>
+      </form>
+    </nav>
+    <script src="script.js"></script>
+  </body>
 </html>
