--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Game To Estudent</title>
+    <title>MGP</title>
   </head>
   <body id="body">
     <div class="sideBar">
       <div class="logoContent">
         <div class="logo">
           <img src="img/logo.png">
-          <h1 class="logoName">GAME TO ESTUDENT</h1>
+          <h1 class="logoName">MGP</h1>
         </div>
       </div>
       <ul class="navList">
@@ -81,7 +81,47 @@
       </ul>
     </div>
     <div class="homeContent">
-      <div class="galleryBanner"></div>
+      <div class="galleryBanner">
+        <div class="slider">
+          <div class="slides">
+            <!--Botôes Radio-->
+            <input type="radio" name="radio-btn" id="radio1">
+            <input type="radio" name="radio-btn" id="radio2">
+            <input type="radio" name="radio-btn" id="radio3">
+            <input type="radio" name="radio-btn" id="radio4">
+            <!--Fim Botôes Radio-->
+  
+            <!--Slide images-->
+            <div id="img1" class="slide first">
+            </div>
+            <div id="img2" class="slide">
+            </div>
+            <div id="img3" class="slide">
+            </div>
+            <div id="img4" class="slide">
+            </div>
+            <!--Fim Slide images-->
+  
+            <!--Navegação automática-->
+            <div class="navigation-auto">
+              <div class="auto-btn1"></div>
+              <div class="auto-btn2"></div>
+              <div class="auto-btn3"></div>
+              <div class="auto-btn4"></div>
+            </div>
+            <!--Fim Navegação automática-->
+          </div>
+  
+          <!--Navegação Manual-->
+          <div class="manual-navigation">
+            <label for="radio1" class="manual-btn"></label>
+            <label for="radio2" class="manual-btn"></label>
+            <label for="radio3" class="manual-btn"></label>
+            <label for="radio4" class="manual-btn"></label>
+          </div>
+          <!--Fim Navegação Manual-->
+        </div>
+      </div>
       <button class="removeBotao" id="carregarMais">carregar mais</button>
       <div class="gallery"></div>
     </div>
